Set version and author.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "nanomosaic"
 edition = "2018"
-version = "0.1.0"
-license = "MIT"
+version = "1.0.0"
+authors = ["Viktor Chvatal"]
 
 [dependencies]
 image = { version = "0.23", default-features = false, features = ["png", "jpeg"]}
